[project]
name = "numatestops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.24.1",
    "fastapi>=0.116.1",
    "gitpython>=3.1.45",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.3",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
]
